--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇨🇦 加拿大-2.12MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-2.60MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.79MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-544.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-345.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.26MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.12MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
