--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.29MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-1.49MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
   - {name: 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇯🇵 日本-271.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-3.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-2.80MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.63MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.29MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
