--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.49MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-271.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-5.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-2.80MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-2.63MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-836.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-271.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.26MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
