--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-192.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-469.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.80MB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-981.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-345.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 未知国家-1.84MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-2.75MB/s(Youtube:不良林), server: 134.195.196.128, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇬🇧 英国-836.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
   - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: vde1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vde1.0bad.com}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-192.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-981.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.75MB/s(Youtube:不良林)
-      - 🇬🇧 英国-836.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
